syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Connections {
	rpc Subscribe (ClientRequest) returns (stream LogSomeInfo);
	rpc SendMessage (LogSomeInfo) returns (NewEmptyRequest);
	rpc CheckIfClientExists (ClientExistRequest) returns (ClientExistResponse);
	rpc SendConnectToElement (ConnectToElementRequest) returns (ConnectToElementResponse);
	rpc SubscribeToConnectedElement (ConnectToElementRequest) returns (stream SubscribeToConnectedElementResponse);
	rpc SendFinishedConnectToElement (SubscribeToConnectedElementResponse) returns (NewEmptyRequest);
}

message NewEmptyRequest {}

message ClientRequest {
	string clientName = 1;
	string clientMachineName = 2;
	string clientUserName = 3;
}

message LogSomeInfo {
	string name = 1;
	int32 id = 2;
}

message ClientExistRequest {
	string clientMachineName = 1;
	string clientUserName = 2;
}

message ClientExistResponse {
	bool isExisting = 1;
}

message ConnectToElementRequest {
	string elementName = 1;
	string clientMachineName = 2;
	string clientUserName = 3;
}

message ConnectToElementResponse {
	bool hasError = 1;
	string errorMessage = 2;
	bool isConnectedToElementSuccessfully = 3;
}

message SubscribeToConnectedElementResponse {
	bool connectionWasFinished = 1;
	string elementName = 2;
	string clientMachineName = 3;
	string clientUserName = 4;
}